Added cache using Redis.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,3 +11,11 @@ services:
           - 5432:5432
         volumes: 
           - ./db/init_db.sql:/docker-entrypoint-initdb.d/init_db.sql
+
+    cache:
+        image: redis
+        container_name: urlshort_cache
+        restart: always
+        ports:
+          - '6379:6379'
+        
